--- a/.github/workflows/dispatch-receive.yml
+++ b/.github/workflows/dispatch-receive.yml
@@ -10,7 +10,7 @@ jobs:
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v3  # Checkout the repository (optional but often required)
 
       - name: Echo dispatch success message
         run: |
